--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -18,9 +18,19 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "primeng": "^16.0.0",
+    "fs": "0.0.1-security",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
+    "stream": "0.0.2",
+    "stream-browserify": "^3.0.0",
+    "timers": "^0.1.1",
+    "timers-browserify": "^2.0.12",
     "tslib": "^2.3.0",
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.6.0",
+    "xml2json": "^0.12.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -28,6 +38,9 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.3.1",
+    "@types/xml-js": "^1.0.0",
+    "@types/xml2js": "^0.4.11",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
