--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "fs": "0.0.1-security",
+    "json-xml-parse": "^1.2.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
@@ -31,6 +32,7 @@
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.0",
     "xml2json": "^0.12.0",
+    "xmlbuilder2": "^3.1.1",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
