--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "fs": "0.0.1-security",
+    "interacto": "^7.4.0",
+    "interacto-angular": "^7.16.0",
     "json-xml-parse": "^1.2.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
