--- a/frontEnd/front/angular.json
+++ b/frontEnd/front/angular.json
@@ -91,6 +91,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "port": 4200,
+            "browserTarget": "front:build",
             "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
