--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "fs": "0.0.1-security",
     "interacto": "^7.4.0",
     "interacto-angular": "^7.16.0",
