--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "bootstrap": "^5.3.2",
     "fs": "0.0.1-security",
     "interacto": "^7.4.0",
     "interacto-angular": "^7.16.0",
