--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -20,13 +20,17 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@canvasjs/angular-charts": "^1.0.3",
+    "@canvasjs/angular-stockcharts": "^1.0.3",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@types/leaflet": "^1.9.8",
     "bootstrap": "^5.3.2",
     "fs": "0.0.1-security",
     "interacto": "^7.4.0",
     "interacto-angular": "^7.16.0",
     "json-xml-parse": "^1.2.4",
+    "leaflet": "^1.9.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
