--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -16,7 +16,6 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.1.5",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
@@ -30,8 +29,10 @@
     "fs": "0.0.1-security",
     "interacto": "^7.4.0",
     "interacto-angular": "^7.16.0",
+    "jquery": "^3.7.1",
     "json-xml-parse": "^1.2.4",
     "leaflet": "^1.9.4",
+    "popper.js": "^1.16.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
