--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -26,12 +27,14 @@
     "@types/leaflet": "^1.9.8",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "express": "^4.18.2",
     "fs": "0.0.1-security",
     "interacto": "^7.4.0",
     "interacto-angular": "^7.16.0",
     "jquery": "^3.7.1",
     "json-xml-parse": "^1.2.4",
     "leaflet": "^1.9.4",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
