--- a/frontEnd/front/package.json
+++ b/frontEnd/front/package.json
@@ -1,17 +1,12 @@
 {
-  "engines": {
-    "node": "18.18.0",
-    "npm": "9.8.1"
-  },
   "name": "front",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
